--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,15 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+#__next {
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
