--- a/src/components/Layout/DashboardLayout.module.css
+++ b/src/components/Layout/DashboardLayout.module.css
@@ -27,7 +27,17 @@
   cursor: pointer;
 }
 
+.menu :global(.ant-menu-item:hover) {
+  color: white !important;
+  background-color: rgba(255, 255, 255, 0.08) !important;
+}
+
 .menu :global(.ant-menu-item-selected) {
+  background-color: #1890ff;
+  color: white;
+}
+
+.menu :global(.ant-menu-item-selected:hover) {
   background-color: #1890ff;
   color: white;
 }
